# altwalker

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  doc8.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: docs.yml  functional.yml  tests.yml
altwalker/: __init__.py  __main__.py  __version__.py  _cli.py  _cli_check.py  _cli_generate.py  _cli_init.py  _cli_offline.py  _cli_run.py  _cli_verify.py  _loader.py  _markdown.py  _prettier.py  _utils.py  _xml.py  cli.py  code.py  data.py  exceptions.py  executor.py  generate.py  graphwalker.py  init.py  loader.py  model.py  planner.py  reporter.py  run.py  walker.py
docs/: api.rst  cli.rst  conf.py  core.rst  demo.md  examples.rst  faq.rst  glossary.rst  how-to.md  how-tos.rst  index.rst  installation.md  installation.rst  license.rst  modeling.md  overview.md  path-generation.rst  quickstart.md  quickstart.rst  tests-structure.md  tests-structure.rst
docs/_static/: login-model.json
docs/core/: modeling.rst  path-generation.rst  running-tests.rst  tests-structure.rst
docs/how-tos/: actions-and-guards.md  actions-and-guards.rst  custom-executor.md  environment-variables.rst  logs.rst  run-tests-with-docker.rst  shared-state.rst
docs/source/: advanced-usage.rst  api.rst  cli.rst  conf.py  core.rst  examples.rst  faq.rst  glossary.rst  how-tos.rst  index.rst  installation.rst  license.rst  overview.rst  quickstart.rst
example/: README.md  altwalker.report.md
example/models/: model.json
example/steps/: full-vertex-coverage.json
example/tests/: test.py
tests/common/: utils.py
tests/integration/: test_cli.py  test_executor.py  test_graphwalker.py  test_rest.py
tests/unit/: test_check.py  test_cli.py  test_cli_check.py  test_cli_generate.py  test_cli_init.py  test_cli_offline.py  test_cli_run.py  test_cli_utils.py  test_cli_verify.py  test_code.py  test_data.py  test_executor.py  test_generate.py  test_graphwalker.py  test_init.py  test_loader.py  test_markdown.py  test_model.py  test_new_generate.py  test_planner.py  test_prettier.py  test_report.py  test_reporter.py  test_run.py  test_utils.py  test_xml.py  (+1 more)
(+106 files in other folders)
